work on CSS and add some HTML

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="./styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
+
     <title>badKid</title>
   </head>
 
   <body>
-
-    <div class="container">
+    <div id="wrapper">
       <div class="header">
         <div class="logo-text">badKid</div>
         <ul class="links">
@@ -22,63 +28,68 @@
 
       <div class="content">
         <div class="content-column">
-          <div>badKid skateboards - riding so we don't die</div>
-          <div>BadKid Skateboards embodies the spirit of freedom and the thrill of the ride, offering an escape from the
-            mundane. Each deck is crafted for those who dare to feel the rush of the wind, the scrape of the pavement,
-            and
+          <div class="h1">Riding not to die</div>
+          <div class="h2">BadKid Skateboards epitomizes thrill and rebellion, where each ride is a bold escape from
             the
-            joy of a perfectly landed trick. The mantra "Riding so we don't die" isn't just a catchy phrase—it's a
-            lifeline
-            for the spirited, a call to break free from the constraints of everyday life. It's about more than just
-            skateboarding; it's about embracing every moment, living on the edge, and proving that in the face of
-            conformity,
-            we choose to skate. BadKid isn't just a brand; it's a rebellion on wheels.</div>
-          <button href="./a">Explore</button>
+            mundane.
+            "Riding not to die" isn't just their mantra; it's a lifestyle.</div>
+          <div class="content-button">
+            <button href="./a">Explore</button>
+          </div>
         </div>
-        <img href="./img/a" alt="insert img alt txt">
-        <!--insert height & width info-->
+        <div class="content-img">
+          <img href="./img/a" alt="insert img alt txt" height="200px" width="400px">
+        </div>
       </div>
-    </div>
 
-    <div class="information">
-      <div>A Different Approach</div>
-      <img href="./img/a" alt="insert img alt txt">
-      <!--insert height & width info-->
-      <div>Community Engagement</div>
-      <div>Actively sponsor local skate events and foster a strong community vibe.</div>
-      <img href="./img/a" alt="insert img alt txt">
-      <!--insert height & width info-->
-      <div>Unique Designs</div>
-      <div>Skateboards feature innovative, artist-driven graphics.</div>
-      <img href="./img/a" alt="insert img alt txt">
-      <!--insert height & width info-->
-      <div>Eco-Friendly</div>
-      <div>BadKid is committed to sustainability, using eco-friendly materials.</div>
-      <img href="./img/a" alt="insert img alt txt">
-      <!--insert height & width info-->
-      <div>Rider-Driven</div>
-      <div>Products are developed with direct input from experienced skateboarders.</div>
-    </div>
-
-    <div class="testimonial">
-      <div>"I’ve been riding BadKid Skateboards for a few years now, and they truly stand out. Their unique,
-        artist-driven
-        designs always turn heads at the park, and the commitment to eco-friendly materials is something I really value.
-        Plus, their community events bring all of us together. It’s not just a board; it’s a statement that you’re part
-        of
-        a bigger movement."</div>
-      <div>Flip McThrash</div>
-    </div>
-
-    <div class="sign-up">
-      <div>Come find out what were all!</div>
-      <div>Get to know the team and what were working on from a more personal perspective with our weekly newsletter.
+      <div class="info-container">
+        <div class="info-header">A Different Approach</div>
+        <div class="info">
+          <div class="info-list">
+            <img href="./img/a" alt="insert img alt txt" height="128px">
+            <div>Community Engagement</div>
+            <p>Actively sponsor local skate events and foster a strong community vibe.</p>
+          </div>
+          <div class="info-list">
+            <img href="./img/a" alt="insert img alt txt" height="128px">
+            <div>Unique Designs</div>
+            <p>Skateboards feature innovative, artist-driven graphics.</p>
+          </div>
+          <div class="info-list">
+            <img href="./img/a" alt="insert img alt txt" height="128px">
+            <div>Eco-Friendly</div>
+            <p>BadKid is committed to sustainability, using eco-friendly materials.</p>
+          </div>
+          <div class="info-list">
+            <img href="./img/a" alt="insert img alt txt" height="128px">
+            <div>Rider-Driven</div>
+            <p>Products are developed with direct input from experienced skateboarders.</p>
+          </div>
+        </div>
       </div>
-      <button href="./a">Sign Up</button>
-    </div>
 
-    <div class="footer">
-      <div>Copyright © badKid 2024</div>
+      <div class="testimonial">
+        <div>"I’ve been riding BadKid Skateboards for a few years now, and they truly stand out. Their unique,
+          artist-driven
+          designs always turn heads at the park, and the commitment to eco-friendly materials is something I really
+          value.
+          Plus, their community events bring all of us together. It’s not just a board; it’s a statement that you’re
+          part
+          of
+          a bigger movement."</div>
+        <div>Flip McThrash</div>
+      </div>
+
+      <div class="sign-up">
+        <div>Come find out what were all!</div>
+        <div>Get to know the team and what were working on from a more personal perspective with our weekly newsletter.
+        </div>
+        <button href="./a">Sign Up</button>
+      </div>
+
+      <div class="footer">
+        <div>Copyright © badKid 2024</div>
+      </div>
     </div>
 
   </body>
