--- a/index.html
+++ b/index.html
@@ -15,83 +15,95 @@
     <title>badKid</title>
   </head>
 
-  <body>
-    <div id="wrapper">
-      <div class="header">
-        <div class="logo-text">badKid</div>
-        <ul class="links">
-          <li><a href="./a">h. link one</a></li>
-          <li><a href="./a">h. link two</a></li>
-          <li><a href="./a">h. link three</a></li>
-        </ul>
-      </div>
+  <body class="body">
+    <nav class="navbar">
+      <div class="container">
+        <div class="logo">badKid</div>
 
-      <div class="content">
-        <div class="content-column">
-          <div class="h1">Riding not to die</div>
-          <div class="h2">BadKid Skateboards epitomizes thrill and rebellion, where each ride is a bold escape from
-            the
-            mundane.
-            "Riding not to die" isn't just their mantra; it's a lifestyle.</div>
-          <div class="content-button">
-            <button href="./a">Explore</button>
-          </div>
-        </div>
-        <div class="content-img">
-          <img href="./img/a" alt="insert img alt txt" height="200px" width="400px">
+        <div>
+          <ul class="nav">
+            <li>
+              <a href="./a">Home</a>
+            </li>
+            <li>
+              <a href="./a">About</a>
+            </li>
+            <li>
+              <a href="./a">Contact</a>
+            </li>
+          </ul>
         </div>
       </div>
+    </nav>
 
-      <div class="info-container">
-        <div class="info-header">A Different Approach</div>
-        <div class="info">
-          <div class="info-list">
-            <img href="./img/a" alt="insert img alt txt" height="128px">
-            <div>Community Engagement</div>
+    <header class="header">
+      <div class="container">
+        <div>
+          <h1>Riding not to die</h1>
+          <p>BadKid Skateboards epitomises thrill and rebellion, where each ride is a bold escape from the mundane.
+            "Riding not to die" isn't just their mantra; it's a lifestyle.</p>
+          <button class="button">Explore</button>
+        </div>
+
+        <img href="./img/a" alt="insert img alt" width="450px" height="225px">
+      </div>
+    </header>
+
+    <section class="info">
+      <div class="container">
+        <h2>A Different Approach</h2>
+        <div class="boxes">
+          <div class="box">
+            <img href="./img/a" alt="insert img alt" width="100px">
+            <h3>Community Engagement</h3>
             <p>Actively sponsor local skate events and foster a strong community vibe.</p>
           </div>
-          <div class="info-list">
-            <img href="./img/a" alt="insert img alt txt" height="128px">
-            <div>Unique Designs</div>
+
+          <div class="box">
+            <img href="./img/a" alt="insert img alt" width="100px">
+            <h3>Unique Designs</h3>
             <p>Skateboards feature innovative, artist-driven graphics.</p>
           </div>
-          <div class="info-list">
-            <img href="./img/a" alt="insert img alt txt" height="128px">
-            <div>Eco-Friendly</div>
+
+          <div class="box">
+            <img href="./img/a" alt="insert img alt" width="100px">
+            <h3>Eco-Friendly</h3>
             <p>BadKid is committed to sustainability, using eco-friendly materials.</p>
           </div>
-          <div class="info-list">
-            <img href="./img/a" alt="insert img alt txt" height="128px">
-            <div>Rider-Driven</div>
+
+          <div class="box">
+            <img href="./img/a" alt="insert img alt" width="100px">
+            <h3>Rider-Driven</h3>
             <p>Products are developed with direct input from experienced skateboarders.</p>
           </div>
         </div>
       </div>
+    </section>
 
-      <div class="testimonial">
-        <div>"I’ve been riding BadKid Skateboards for a few years now, and they truly stand out. Their unique,
-          artist-driven
-          designs always turn heads at the park, and the commitment to eco-friendly materials is something I really
-          value.
-          Plus, their community events bring all of us together. It’s not just a board; it’s a statement that you’re
-          part
-          of
-          a bigger movement."</div>
-        <div>Flip McThrash</div>
-      </div>
+    <section class=" testimonial">
+      <div class="container">
+        <p class="quote">"I’ve been riding BadKid Skateboards for a few years now, and they truly stand out. From any
+          other board I've ridden."</p>
 
-      <div class="sign-up">
-        <div>Come find out what were all!</div>
-        <div>Get to know the team and what were working on from a more personal perspective with our weekly newsletter.
+        <div class="name">
+          <p>- Flip McThrash</p>
         </div>
-        <button href="./a">Sign Up</button>
       </div>
-
-      <div class="footer">
-        <div>Copyright © badKid 2024</div>
-      </div>
+    </section>
+    <div class="container">
+      <section class="action">
+        <div>
+          <h2>Come find out what were all about!</h2>
+          <p>Get to know the team and what were working on from a more personal perspective with our weekly
+            newsletter.</p>
+        </div>
+        <button class="sign-up">Sign Up</button>
+      </section>
     </div>
 
+    <footer class="footer">
+      <div class="container">
+        <p>Copyright © badKid 2024</p>
+      </div>
+    </footer>
   </body>
-
-  </html>
