create img folder and link photos. update README and touch up CSS

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <button class="button">Explore</button>
         </div>
 
-        <img href="./img/a" alt="insert img alt" width="450px" height="225px">
+        <img src="./img/hero.webp" alt="insert img alt" width="450px" height="225px">
       </div>
     </header>
 
@@ -54,25 +54,25 @@
         <h2>A Different Approach</h2>
         <div class="boxes">
           <div class="box">
-            <img href="./img/a" alt="insert img alt" width="100px">
+            <img src="./img/community.png" alt="insert img alt" width="100px" height="100px">
             <h3>Community Engagement</h3>
             <p>Actively sponsor local skate events and foster a strong community vibe.</p>
           </div>
 
           <div class="box">
-            <img href="./img/a" alt="insert img alt" width="100px">
+            <img src="./img/deisgn.png" alt="insert img alt" width="100px" height="100px">
             <h3>Unique Designs</h3>
             <p>Skateboards feature innovative, artist-driven graphics.</p>
           </div>
 
           <div class="box">
-            <img href="./img/a" alt="insert img alt" width="100px">
+            <img src="./img/eco.png" alt="insert img alt" width="100px" height="100px">
             <h3>Eco-Friendly</h3>
             <p>BadKid is committed to sustainability, using eco-friendly materials.</p>
           </div>
 
           <div class="box">
-            <img href="./img/a" alt="insert img alt" width="100px">
+            <img src="./img/rider.png" alt="insert img alt" width="100px" height="100px">
             <h3>Rider-Driven</h3>
             <p>Products are developed with direct input from experienced skateboarders.</p>
           </div>
